# shopping_cart

./: API_Documentation.md  README.md  pyproject.toml
shop_ease/: manage.py
shop_ease/shop_ease/: asgi.py  settings.py  urls.py  wsgi.py
shop_ease/shopping_cart/: models.py  serializer.py  urls.py  utils.py  views.py
shop_ease/shopping_cart/migrations/: 0001_initial.py  0002_product_user_is_delete_order_orderitem_and_more.py  0002_remove_user_user_email.py  0003_alter_user_email.py  0004_remove_user_user_name.py  0005_order_total_price.py  0006_payment.py  0007_alter_payment_payment_status.py
shop_ease/table_design/: shopping_cart_design.drawio
